feat<SCRUM-71>: Inserção de visualização do TG do aluno, comentario e conclusão